...
  "searchResultsLabel": "Search results",
  "searchDefaultLabel": "Please enter a search word",
  "allItemsLabel": "All",
  "recentlyAddedLabel": "Recently",
  "noMealsRecentlyAddedLabel": "No meals recently added",
  "noActivityRecentlyAddedLabel": "No activity recently added",
  "dialogOKLabel": "OK",
  "dialogCancelLabel": "CANCEL",
  "buttonStartLabel": "START",
  "buttonNextLabel": "NEXT",
  "buttonSaveLabel": "Save",
  "buttonYesLabel": "YES",
  "buttonResetLabel": "Reset",
  "onboardingWelcomeLabel": "Welcome to",
  "onboardingOverviewLabel": "Overview",
  "onboardingYourGoalLabel": "Your calorie goal:",
...
  "chooseWeightGoalLabel": "Choose Weight Goal",
  "goalLoseWeight": "Lose Weight",
  "goalMaintainWeight": "Maintain Weight",
  "goalGainWeight": "Gain Weight",
  "goalLabel": "Goal",
  "selectHeightDialogLabel": "Select Height",
  "heightLabel": "Height",
  "cmLabel": "cm",
  "ftLabel": "ft",
  "selectWeightDialogLabel": "Select Weight",
  "weightLabel": "Weight",
  "kgLabel": "kg",
  "lbsLabel": "lbs",
  "ageLabel": "Age",
  "yearsLabel": "{age} years",
  "selectGenderDialogLabel": "Select Gender",
  "genderLabel": "Gender",
  "genderMaleLabel": "♂ male",
  "genderFemaleLabel": "♀ female",
  "nothingAddedLabel": "Nothing added",
  "nutritionalStatusUnderweight": "Underweight",
  "nutritionalStatusNormalWeight": "Normal Weight",
  "nutritionalStatusPreObesity": "Pre-obesity",
  "nutritionalStatusObeseClassI": "Obesity Class I",
...
